# desclasificados-swd

./: .env.example  .gitignore  CLAUDE.md  Makefile  STARTHERE.md  TESTING_CLAUDE.md  main.py  pyproject.toml  test_claude_integration.py
app/: analyze_documents.py  batch.py  batch_processor.py  config.py  evaluate.py  explorer.py  model.py  research_reports.py  research_tracker.py  serve_report.py  state_manager.py  transcribe.py  transcribe_claude.py  transcribe_openai.py  transcribe_v2.py  visualize_transcripts.py
docs/: BATCH_API_IMPLEMENTATION_PLAN.md  CLAUDE_MIGRATION_ANALYSIS.md  DATA_INVENTORY.md  DISAMBIGUATION_RESEARCH.md  PROJECT_CONTEXT.md  QUALITY_TESTING_METHODS.md  RAG_IMPLEMENTATION_PLAN.md  RAG_TESTING_METHODOLOGIES.md  README.md  RESEARCH_QUESTIONS.md  RESEARCH_REPORTS.md  about.html  index.html
investigations/: 001-empty-reviewed-text.md  002-low-chars-per-page-documents.md  003-batch-api-implementation.md  README.md
notebooks/: data_inspect.ipynb
reports/: TRANSCRIPTION_ASSESSMENT_2025-12-07.md  TRANSCRIPTION_CODE_ASSESSMENT_2025-12-07.md  TRANSCRIPTION_COMPLETION_PLAN.md  TRANSCRIPTION_SIMPLIFICATION_PLAN.md  TRANSCRIPTION_TECHNICAL_PLAN.md  model_comparison_report.py
research/: CLAUDE_TRANSCRIPTION_PLAN.md  FULL_PASS_PLAN.md  GPT41_NANO_FULL_PASS_PLAN.md  HAIKU_FULL_PASS_PLAN.md  PROMPT_IMPROVEMENT_PLAN.md  PROMPT_MANAGEMENT_RESEARCH.md  README.md  VALIDATION_BATCH_RESULTS.md
scripts/: backfill_schema_v2_2.py  generate_economic_report.py
tests/: TEST_QUERIES_RESULTS.md  test_analyze_documents.py  test_app.py  test_explorer.py  (+3 more)
(+85 files in other folders)
