[project]
name = "desclasificados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "jsonschema>=4.25.1",
    "llama-index>=0.14.8",
    "matplotlib>=3.8.0",
    "openai>=1.0.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "ruff>=0.11.5",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
